Fix slight jumping for add category buttons

--- a/src/components/budget/components/add-button/add-button.module.css
+++ b/src/components/budget/components/add-button/add-button.module.css
@@ -1,5 +1,6 @@
 .button.button.button {
     text-align: left;
+    margin: 1px 0;
 }
 
 @media screen and (max-width: 767px) {
