--- a/src/components/budget/components/budget-table/budget-table.module.css
+++ b/src/components/budget/components/budget-table/budget-table.module.css
@@ -2,6 +2,9 @@
     margin: .5em;
     width: calc(100% - 1em);
 }
+button.addCategory.addCategory.addCategory {
+    padding: .85em 1.5em;
+}
 
 .header.header.header.header {
     flex-basis: 0;
